--- a/src/Leaf.Web/Views/Shared/_NoitLayout.cshtml
+++ b/src/Leaf.Web/Views/Shared/_NoitLayout.cshtml
@@ -21,10 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Noit", "Index", "Noit")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Training", "Training", "Noit")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
