Moved NoitLayout from Views/Shared to Views/Noit

--- a/src/Leaf.Web/Views/Noit/Training.cshtml
+++ b/src/Leaf.Web/Views/Noit/Training.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    Layout = "~/Views/Shared/_NoitLayout.cshtml";
+    Layout = "~/Views/Noit/_NoitLayout.cshtml";
     ViewBag.Title = "Training";
 }
 
