--- a/src/Leaf.Web/Views/Noit/Index.cshtml
+++ b/src/Leaf.Web/Views/Noit/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿
 @{
-    Layout = "~/Views/Noit/_NoitLayout.cshtml";
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Noit home page</h2>
 
