Getting 3 random questions from each category

--- a/src/Leaf.Web/Views/Noit/FullTest.cshtml
+++ b/src/Leaf.Web/Views/Noit/FullTest.cshtml
@@ -1,8 +1,8 @@
-﻿@model  Leaf.Models.Question
+﻿@model  IEnumerable<Leaf.Models.Question>
 @{
     ViewBag.Title = "FullTest";
 }
 
 <h2>FullTest</h2>
 
-<h3>@Model.Condition</h3>
+<h3>@Model.FirstOrDefault().Condition</h3>
