--- a/src/Leaf.Web/Views/Noit/FullTest.cshtml
+++ b/src/Leaf.Web/Views/Noit/FullTest.cshtml
@@ -24,7 +24,10 @@
     function nextQuestion() {
         $.ajax({
             url: '@Url.Action("FullTest", "Noit")',
-            data: { answer: "@Model.Answers.FirstOrDefault()"},
+            data: {
+                questionId : @Model.Id,
+                answer: "@Model.Answers.FirstOrDefault()"
+            },
             success: function (data) {
                 console.log(data);
             }
