--- a/src/Leaf.Web/Views/Noit/_Question.cshtml
+++ b/src/Leaf.Web/Views/Noit/_Question.cshtml
@@ -10,7 +10,8 @@
 
         @foreach (var answer in Model.Answers)
         {
-            <button class="btn btn-primary answer">@answer.Content</button>
+            @Html.ActionLink(answer.Content, "FullTest", "Noit", new { questionId = this.Model.Id, answerId = answer.Id}, null)
+            @*<button class="btn btn-primary answer">@answer.Content</button>*@
         }
     </div>
 </div>
