--- a/src/Leaf.Web/Views/Noit/FullTest.cshtml
+++ b/src/Leaf.Web/Views/Noit/FullTest.cshtml
@@ -7,4 +7,4 @@
 
 <h2>FullTest</h2>
 
-@Html.ActionLink((string)ViewBag.ButtonText, "StartTest", "Noit", null, null)
+<h3>@Html.ActionLink((string)ViewBag.ButtonText, "StartTest", "Noit", null, null)</h3>
