--- a/src/Leaf.Web/Views/Noit/_Question.cshtml
+++ b/src/Leaf.Web/Views/Noit/_Question.cshtml
@@ -10,8 +10,11 @@
 
         @foreach (var answer in Model.Answers)
         {
-            @Html.ActionLink(answer.Content, "ReceiveAnswer", "Noit", new { questionId = this.Model.Id, answerId = answer.Id}, null)
-            @*<button class="btn btn-primary answer">@answer.Content</button>*@
+            @Html.ActionLink(answer.Content,
+               "ReceiveAnswer",
+               "Noit",
+               new { questionId = this.Model.Id, answerId = answer.Id },
+               new { @class = "btn btn-primary answer" })
         }
     </div>
 </div>
