Moved NoitController logic to a separate area

--- a/src/Leaf.Web/Areas/Noit/Views/FullTest/FullTest.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/FullTest/FullTest.cshtml
@@ -7,4 +7,4 @@
 
 <h2>FullTest</h2>
 
-<h3>@Html.ActionLink((string)ViewBag.ButtonText, "StartTest", "Noit", null, null)</h3>
+<h3>@Html.ActionLink((string)ViewBag.ButtonText, "StartTest", "FullTest", null, null)</h3>
