--- a/src/Leaf.Web/Areas/Noit/Views/Shared/_NoitLayout.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Shared/_NoitLayout.cshtml
@@ -21,8 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Noit", "Index", "Noit")</li>
-                    <li>@Html.ActionLink("Training", "Training", "Noit")</li>
+                    @*<li>@Html.ActionLink("Noit Home", "Index", "Home")</li>*@
+                    <li>@Html.ActionLink("Full Test", "Index", "FullTest")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
