--- a/src/Leaf.Web/Areas/Noit/Views/Shared/_Question.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Shared/_Question.cshtml
@@ -12,7 +12,7 @@
         {
             @Html.ActionLink(answer.Content,
                "ReceiveAnswer",
-               "Noit",
+               "FullTest",
                new { questionId = this.Model.Id, answerId = answer.Id },
                new { @class = "btn btn-primary answer" })
         }
