Added ViewModels for FullTestController

--- a/src/Leaf.Web/Areas/Noit/Views/FullTest/FinishedTest.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/FullTest/FinishedTest.cshtml
@@ -1,5 +1,4 @@
-﻿@using Leaf.Models
-@model  Leaf.Models.Test
+﻿@model  Leaf.Web.Areas.Noit.Models.TestDetailsViewModel
 
 @{
     ViewBag.Title = "FinishedTest";
