Added page for submission

--- a/src/Leaf.Web/Areas/Noit/Views/Submit/Submission.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Submit/Submission.cshtml
@@ -1,55 +1,11 @@
-﻿@model Leaf.Web.Areas.Noit.Models.SubmissionViewModel
+﻿@model Leaf.Web.Areas.Noit.Models.Submit.SubmissionViewModel
 
 @{
     ViewBag.Title = "Submission";
 }
 
-<h2>New Submission</h2>
+<h2>Submission</h2>
 
-@using (Html.BeginForm("CreateSubmission", "Submit"))
-{
-    @Html.AntiForgeryToken()
+<p>@Model.Condition</p>
+<p>@Model.CorrectAnswer</p>
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.Categories, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(m => m.CategoryName, Model.Categories)
-            </div>
-        </div>
-        
-        <div class="form-group">
-            @Html.LabelFor(model => model.Condition, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Condition, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Condition, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CorrectAnswer, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CorrectAnswer, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CorrectAnswer, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        
-        <div class="form-group">
-            @Html.LabelFor(model => model.IncorrectAnswerOne, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.IncorrectAnswerOne, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IncorrectAnswerOne, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Submit" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
