Moved FullTest ViewModels to separate folder

--- a/src/Leaf.Web/Areas/Noit/Views/FullTest/FinishedTest.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/FullTest/FinishedTest.cshtml
@@ -1,4 +1,4 @@
-﻿@model  Leaf.Web.Areas.Noit.Models.TestDetailsViewModel
+﻿@model  Leaf.Web.Areas.Noit.Models.FullTest.TestDetailsViewModel
 
 @{
     ViewBag.Title = "FinishedTest";
