--- a/src/Leaf.Web/Areas/Noit/Views/Shared/_Question.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Shared/_Question.cshtml
@@ -1,4 +1,4 @@
-﻿@model  Leaf.Web.Areas.Noit.Models.NextQuestionViewModel
+﻿@model  Leaf.Web.Areas.Noit.Models.FullTest.NextQuestionViewModel
 
 <link href="~/Content/questionBox.css" rel="stylesheet" />
 
