--- a/src/Leaf.Web/Areas/Noit/Views/FullTest/Test.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/FullTest/Test.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Leaf.Models
-@model  Leaf.Web.Areas.Noit.Models.NextQuestionViewModel
+@model  Leaf.Web.Areas.Noit.Models.FullTest.NextQuestionViewModel
 @{
     ViewBag.Title = "Test";
 }
