--- a/src/Leaf.Web/Areas/Noit/Views/Submit/Submission.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Submit/Submission.cshtml
@@ -8,4 +8,7 @@
 
 <p>@Model.Condition</p>
 <p>@Model.CorrectAnswer</p>
-
+@foreach (var incorrectAnswer in Model.IncorrectAnswers)
+{
+    <p>@incorrectAnswer</p>
+}
