--- a/src/Leaf.Web/Views/Shared/_Layout.cshtml
+++ b/src/Leaf.Web/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    @*<li>@Html.ActionLink("Noit", "Index", "Home", new { area = "Noit" }, new { })</li>*@
+                    <li>@Html.ActionLink("Noit", "Noit", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
