Added action link to creating new submission on submit home page

--- a/src/Leaf.Web/Areas/Noit/Views/Submit/Index.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Submit/Index.cshtml
@@ -4,4 +4,7 @@
 }
 
 <h2>Submit</h2>
-<p>Send us questions!</p>
+<p>Help us enlarge our questions database by sending us more questons</p>
+<p>Your questions would first have to be approved by a moderator.</p>
+
+@Html.ActionLink("Send us a question", "New", "Submit", null, null)
