--- a/src/Leaf.Web/Content/bootstrap.superhero.css
+++ b/src/Leaf.Web/Content/bootstrap.superhero.css
@@ -904,12 +904,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #df691a;
+  color: #4ead6a;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #df691a;
+  color: #4ead6a;
   text-decoration: underline;
 }
 a:focus {
@@ -1147,7 +1147,7 @@ mark,
   color: #4e5d6c;
 }
 .text-primary {
-  color: #df691a;
+  color: #4ead6a;
 }
 a.text-primary:hover {
   color: #b15315;
@@ -1178,7 +1178,7 @@ a.text-danger:hover {
 }
 .bg-primary {
   color: #fff;
-  background-color: #df691a;
+  background-color: #4ead6a;
 }
 a.bg-primary:hover {
   background-color: #b15315;
@@ -2803,7 +2803,7 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #df691a;
+  background-color: #4ead6a;
   border-color: transparent;
 }
 .btn-primary:hover,
@@ -2835,11 +2835,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #df691a;
+  background-color: #4ead6a;
   border-color: transparent;
 }
 .btn-primary .badge {
-  color: #df691a;
+  color: #4ead6a;
   background-color: #ffffff;
 }
 .btn-success {
@@ -3007,7 +3007,7 @@ fieldset[disabled] .btn-danger.active {
   background-color: #ffffff;
 }
 .btn-link {
-  color: #df691a;
+  color: #4ead6a;
   font-weight: normal;
   cursor: pointer;
   border-radius: 0;
@@ -3028,7 +3028,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #df691a;
+  color: #4ead6a;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3168,7 +3168,7 @@ tbody.collapse.in {
   color: #ffffff;
   text-decoration: none;
   outline: 0;
-  background-color: #df691a;
+  background-color: #4ead6a;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -3597,7 +3597,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #4e5d6c;
-  border-color: #df691a;
+  border-color: #4ead6a;
 }
 .nav .nav-divider {
   height: 1px;
@@ -3690,7 +3690,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #df691a;
+  background-color: #4ead6a;
 }
 .nav-stacked > li {
   float: none;
@@ -4174,7 +4174,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #cccccc;
 }
 .navbar-inverse {
-  background-color: #df691a;
+  background-color: #4ead6a;
   border-color: transparent;
 }
 .navbar-inverse .navbar-brand {
@@ -4194,13 +4194,13 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
   color: #ebebeb;
-  background-color: #c85e17;
+  background-color: #367048;
 }
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
   color: #ebebeb;
-  background-color: #c85e17;
+  background-color: #367048;
 }
 .navbar-inverse .navbar-nav > .disabled > a,
 .navbar-inverse .navbar-nav > .disabled > a:hover,
@@ -4213,7 +4213,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
-  background-color: #c85e17;
+  background-color: #367048;
 }
 .navbar-inverse .navbar-toggle .icon-bar {
   background-color: #ebebeb;
@@ -4225,7 +4225,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
 .navbar-inverse .navbar-nav > .open > a:focus {
-  background-color: #c85e17;
+  background-color: #367048;
   color: #ebebeb;
 }
 @media (max-width: 767px) {
@@ -4241,13 +4241,13 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
     color: #ebebeb;
-    background-color: #c85e17;
+    background-color: #367048;
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #ebebeb;
-    background-color: #c85e17;
+    background-color: #367048;
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:hover,
@@ -4341,7 +4341,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 2;
   color: #ebebeb;
-  background-color: #df691a;
+  background-color: #4ead6a;
   border-color: transparent;
   cursor: default;
 }
@@ -4457,7 +4457,7 @@ a.label:focus {
   background-color: #39444e;
 }
 .label-primary {
-  background-color: #df691a;
+  background-color: #4ead6a;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
@@ -4524,7 +4524,7 @@ a.badge:focus {
 }
 a.list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #df691a;
+  color: #4ead6a;
   background-color: #ffffff;
 }
 .nav-pills > li > a > .badge {
@@ -4588,7 +4588,7 @@ a.list-group-item.active > .badge,
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #df691a;
+  border-color: #4ead6a;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -4702,7 +4702,7 @@ a.thumbnail.active {
   line-height: 21px;
   color: #ffffff;
   text-align: center;
-  background-color: #df691a;
+  background-color: #4ead6a;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -4853,8 +4853,8 @@ a.list-group-item:focus {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #df691a;
-  border-color: #df691a;
+  background-color: #4ead6a;
+  border-color: #4ead6a;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5191,14 +5191,14 @@ a.list-group-item-danger.active:focus {
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #df691a;
+  background-color: #4ead6a;
   border-color: transparent;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: transparent;
 }
 .panel-primary > .panel-heading .badge {
-  color: #df691a;
+  color: #4ead6a;
   background-color: #ffffff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
@@ -6176,7 +6176,7 @@ button.close {
 }
 .navbar-inverse .badge {
   background-color: #fff;
-  color: #df691a;
+  color: #4ead6a;
 }
 .btn {
   font-weight: 300;
@@ -6193,7 +6193,7 @@ body {
 }
 .text-primary,
 .text-primary:hover {
-  color: #df691a;
+  color: #4ead6a;
 }
 .text-success,
 .text-success:hover {
