Added pictures to error pages

--- a/src/Leaf.Web/Views/Error/NotFound.cshtml
+++ b/src/Leaf.Web/Views/Error/NotFound.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "NotFound";
 }
 <div class="jumbotron">
-    <h1><i class="glyphicon glyphicon-search red"></i> 404 Not Found</h1>
-    <p class="lead">We couldn't find what you're looking for on <em><span id="display-domain"></span></em>.</p>
+    <p class="lead">Изглежда, че се загубихте!</p>
+    <img width="900" src="../../images/Error404.png" />
+    <p class="lead">Но пък намерихте коалата ни. Бихте ли я опътили обратно?</p>
+
 </div>
