--- a/src/Leaf.Web/Views/Error/ServerError.cshtml
+++ b/src/Leaf.Web/Views/Error/ServerError.cshtml
@@ -4,6 +4,6 @@
 }
 
 <div class="jumbotron">
-    <h1><span class="glyphicon glyphicon-fire red"></span>500 Internal Server Error</h1>
-    <p class="lead">The web server is returning an internal error.</p>
+    <p class="lead">Изглежда, че имаме проблем. Моля, опитайте отново, малко по-късно!</p>
+    <img width="900" src="../../images/Error500.png"/>
 </div>
