--- a/src/Leaf.Web/Areas/Noit/Views/FullTest/FinishedTest.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/FullTest/FinishedTest.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "FinishedTest";
 }
 
-<h2>Test</h2>
+<h2>Тест</h2>
 
-<P>Good job! You got @Model.CorrectCount questions right</P>
+<P>Поздравления! Имате @Model.CorrectCount верни отговора.</P>
 
