--- a/src/Leaf.Web/Areas/Noit/Views/Moderation/Index.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Moderation/Index.cshtml
@@ -3,6 +3,6 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Approve submissions</h2>
+<h2>Удобрете изпратените ни въпроси</h2>
 
-@Html.ActionLink("Check submissions", "Submissions", "Moderation", null, null)
+@Html.ActionLink("Удобрете въпроси", "Submissions", "Moderation", null, null)
