--- a/src/Leaf.Web/Areas/Noit/Views/Moderation/Submissions.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Moderation/Submissions.cshtml
@@ -5,7 +5,7 @@
 <link href="~/Content/PagedList.css" rel="stylesheet"
       type="text/css" />
 
-<h2>Submissions</h2>
+<h2>Изпратени въпроси</h2>
 
 @foreach (var submission in Model)
 {
