--- a/src/Leaf.Web/Areas/Noit/Views/Submit/Index.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Submit/Index.cshtml
@@ -3,8 +3,10 @@
     ViewBag.Title = "Submit";
 }
 
-<h2>Submit</h2>
-<p>Help us enlarge our questions database by sending us more questons</p>
-<p>Your questions would first have to be approved by a moderator.</p>
+<h2>Изпратете въпрос</h2>
 
-@Html.ActionLink("Send us a question", "New", "Submit", null, null)
+<p>Помогнете ни да обогатим базата ни от въпроси!</p>
+
+<p>Въпросите ви първо трябва да бъдат удобрени от модератор.</p>
+
+@Html.ActionLink("Изпратете въпрос", "New", "Submit", null, null)
