--- a/src/Leaf.Web/Areas/Noit/Views/Submit/Submission.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Submit/Submission.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Submission";
 }
 
-<h2>Submission</h2>
+<h2>Нов въпрос</h2>
 
 <p>@Model.Condition</p>
 <p>@Model.CorrectAnswer</p>
