--- a/src/Leaf.Web/Views/Home/Noit.cshtml
+++ b/src/Leaf.Web/Views/Home/Noit.cshtml
@@ -6,5 +6,24 @@
     ViewBag.Title = "Noit";
 }
 
-<h2>Noit</h2>
+<h2>НОИТ</h2>
+<h3>Национална олимпиада по информационни технологии</h3>
 
+<p>
+    Преди 2 години ми се откри възможността да вляза в ФМИ, чрез тази олимпиада.
+    Тъй като нямах никакви шансове да постигна добри резултатите с изпит по математика, възложих всичките си надежни на тази олимпиада.
+</p>
+
+<p>
+    Без никакъв опит на подобни олимпиади, и ограничение познания в сферата успях да се справя и да изкарам възможно най-добрата оценка
+     и да събера достатъчно за да вляза в желания университет.
+</p>
+
+<p>
+    Каква е тайната на успеха ми? Ами, реших около 600 въпроса за 1-2 месеца. Беше малко скучно и не толкова ефективно. За това и цяля
+    тук да може да постигнете същия ефект, но по много по-интересен начин. 
+</p>
+
+<p>
+    Започнете с някой тест и ще видите за какво говоря...
+</p>
