--- a/src/Leaf.Web/Areas/Noit/Views/Submit/New.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Submit/New.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "New submission";
 }
 
-<h2>New Submission</h2>
+<h2>Ново въпрос</h2>
 
 @using (Html.BeginForm("CreateSubmission", "Submit"))
 {
