--- a/src/Leaf.Web/Views/Home/About.cshtml
+++ b/src/Leaf.Web/Views/Home/About.cshtml
@@ -1,7 +1,3 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿<h2>За листо</h2>
 
-<p>Use this area to provide additional information.</p>
+<p>Листо не е истинското име на този проект. Ако имате идеи как наистина да се казва, съм отворен за предложения.</p>
