--- a/src/Leaf.Web/Areas/Noit/Views/Submit/New.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Submit/New.cshtml
@@ -15,14 +15,14 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
-            @Html.LabelFor(m => m.Categories, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">Категория: </label>
             <div class="col-md-10">
                 @Html.DropDownListFor(m => m.CategoryName, Model.Categories)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Condition, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">Условие: </label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Condition, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Condition)
@@ -30,23 +30,36 @@
         </div>
         
         <div class="form-group">
-            @Html.LabelFor(model => model.CorrectAnswer, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">Верен отговор: </label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CorrectAnswer, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CorrectAnswer, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        @for (int i = 0; i < @Model.IncorrectAnswers.Length; i++)
-        {
-            <div class="form-group">
-                @Html.LabelFor(model => model.IncorrectAnswers[i], htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.IncorrectAnswers[i], new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.IncorrectAnswers[i], "", new { @class = "text-danger" })
-                </div>
+        
+        <div class="form-group">
+            <label class="control-label col-md-2">Грешен отговор: </label>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.IncorrectAnswerOne, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.IncorrectAnswerOne, "", new { @class = "text-danger" })
             </div>
-        }
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-md-2">Грешен отговор: </label>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.IncorrectAnswerTwo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.IncorrectAnswerTwo, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        
+        <div class="form-group">
+            <label class="control-label col-md-2">Грешен отговор: </label>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.IncorrectAnswerThree, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.IncorrectAnswerThree, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
