--- a/src/Leaf.Web/Views/Shared/_Layout.cshtml
+++ b/src/Leaf.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Leaf.Commom
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -21,10 +22,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Листо", "Index", "Home")</li>
                     <li>@Html.ActionLink("НОИТ", "Noit", "Home")</li>
                     <li>@Html.ActionLink("За листо", "About", "Home")</li>
                     <li>@Html.ActionLink("Контакти", "Contact", "Home")</li>
+                    @if (Request.IsAuthenticated && User.IsInRole(Constants.Administrator))
+                    {
+                        <li>@Html.ActionLink("Администрация", "Index", "Administration", new { area = "Administration" }, null)</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
