--- a/src/Leaf.Web/Areas/Noit/Views/Shared/_Question.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Shared/_Question.cshtml
@@ -28,7 +28,7 @@
             @Html.ActionLink(answer.Content,
                "ReceiveAnswer",
                "FullTest",
-               new { questionId = this.Model.QuestionId, answerId = answer.Id },
+               new {testId = this.Model.TestId ,questionId = this.Model.QuestionId, answerId = answer.Id },
                new { @class = "btn btn-primary answer" })
         }
     </div>
