Changed logic of GetUserTest in FullTestController

--- a/src/Leaf.Web/Areas/Noit/Views/FullTest/FullTest.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/FullTest/FullTest.cshtml
@@ -8,4 +8,4 @@
 
 <p>Решете един цял тест, за времето което бихте имали и на истинската олимпиада, за да видите колко точки имате и каква оценка бихте получили.</p>
 
-<h3>@Html.ActionLink((string)ViewBag.ButtonText, "StartTest", "FullTest", null, null)</h3>
+<h3>@Html.ActionLink((string)ViewBag.ButtonText, "GetUserTest", "FullTest", null, null)</h3>
