--- a/src/Leaf.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/Leaf.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,13 +1,12 @@
 ﻿@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    using (Html.BeginForm("LogOff", "Account", new { area = "" }, FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
         @Html.AntiForgeryToken()
 
         <ul class="nav navbar-nav navbar-right">
             <li>@Html.ActionLink("Здравей, " + User.Identity.GetUserName() + "!", "Index", "Manage", new { area = "" }, new { title = "Manage" })</li>
-            @*<li>@Html.ActionLink("Изход", "LogOff", "Account", new { area = "" }, new { title = "Manage" })</li>*@
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Изход</a></li>
         </ul>
     }
