Added Practice test

--- a/src/Leaf.Web/Areas/Noit/Views/FullTest/FullTest.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/FullTest/FullTest.cshtml
@@ -1,5 +1,4 @@
-﻿@using Leaf.Models
-@model  bool  
+﻿@Model  bool  
 @{
     ViewBag.ButtonText = Model ? "Продължете стария си тест" : "Започнете нов тест";
 }
