--- a/src/Leaf.Web/Areas/Noit/Views/Tests/Practice.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Tests/Practice.cshtml
@@ -1,9 +1,8 @@
-﻿@Model  bool
-@{
+﻿@{
     ViewBag.ButtonText = Model ? "Продължете старата си тренировка" : "Започнете нова тренировка";
 }
 
 <h2>Тренировка</h2>
 
 
-<h3>@Html.ActionLink((string)ViewBag.ButtonText, "GetUserPractice", "FullTest", null, null)</h3>
+<h3>@Html.ActionLink((string)ViewBag.ButtonText, "GetUserPractice", "Tests", null, null)</h3>
