--- a/src/Leaf.Web/Areas/Noit/Views/Shared/_NoitLayout.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Shared/_NoitLayout.cshtml
@@ -22,8 +22,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Тест", "Index", "FullTest", new { area = "Noit" }, null)</li>
-                    <li>@Html.ActionLink("Тренировка", "Practice", "FullTest", new { area = "Noit" }, null)</li>
+                    <li>@Html.ActionLink("Тест", "Index", "Tests", new { area = "Noit" }, null)</li>
+                    <li>@Html.ActionLink("Тренировка", "Practice", "Tests", new { area = "Noit" }, null)</li>
                     <li>@Html.ActionLink("Изпратете въпрос", "Index", "Submit", new { area = "Noit" }, null)</li>
                     @if (Request.IsAuthenticated && User.IsInRole(Constants.NoitModerator))
                     {
