--- a/src/Leaf.Web/Areas/Noit/Views/Tests/FullTest.cshtml
+++ b/src/Leaf.Web/Areas/Noit/Views/Tests/FullTest.cshtml
@@ -1,5 +1,4 @@
-﻿@Model  bool  
-@{
+﻿@{
     ViewBag.ButtonText = Model ? "Продължете стария си тест" : "Започнете нов тест";
 }
 
@@ -7,4 +6,4 @@
 
 <p>Решете един цял тест, за времето което бихте имали и на истинската олимпиада, за да видите колко точки имате и каква оценка бихте получили.</p>
 
-<h3>@Html.ActionLink((string)ViewBag.ButtonText, "GetUserTest", "FullTest", null, null)</h3>
+<h3>@Html.ActionLink((string)ViewBag.ButtonText, "GetUserTest", "Tests", null, null)</h3>
