Removed NOIT area and moved tests, submit and moderation controllers.

--- a/src/Leaf.Web/Areas/Moderation/Views/Moderation/Submissions.cshtml
+++ b/src/Leaf.Web/Areas/Moderation/Views/Moderation/Submissions.cshtml
@@ -1,6 +1,6 @@
 ﻿@using PagedList.Mvc
 
-@model PagedList.IPagedList<Leaf.Web.Areas.Noit.Models.Submit.ShortSubmission>
+@model PagedList.IPagedList<Leaf.Web.Models.Submit.ShortSubmission>
 
 <link href="~/Content/PagedList.css" rel="stylesheet"
       type="text/css" />
