--- a/src/Leaf.Web/Areas/Moderation/Views/Moderation/_ListSubmissionPartial.cshtml
+++ b/src/Leaf.Web/Areas/Moderation/Views/Moderation/_ListSubmissionPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Leaf.Web.Areas.Noit.Models.Submit.ShortSubmission
+﻿@model Leaf.Web.Models.Submit.ShortSubmission
 
 <div class="well">
     <h2 class="media-heading">
