--- a/src/Leaf.Web/Areas/Moderation/Views/Shared/_Layout.cshtml
+++ b/src/Leaf.Web/Areas/Moderation/Views/Shared/_Layout.cshtml
@@ -22,13 +22,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Тест", "Index", "Tests", new { area = "Noit" }, null)</li>
-                    <li>@Html.ActionLink("Тренировка", "Practice", "Tests", new { area = "Noit" }, null)</li>
-                    <li>@Html.ActionLink("Изпратете въпрос", "Index", "Submit", new { area = "Noit" }, null)</li>
-                    @if (Request.IsAuthenticated && User.IsInRole(Constants.NoitModerator))
-                    {
-                        <li>@Html.ActionLink("Модерация", "Index", "Moderation", new { area = "Noit" }, null)</li>
-                    }
+                    <li>@Html.ActionLink("Модерация", "Index", "Moderation", new { area = "Moderation" }, null)</li>
+                    <li>@Html.ActionLink("Въпроси", "Submissions", "Moderation", new { area = "Moderation" }, null)</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
