--- a/src/Leaf.Web/Views/Home/Noit.cshtml
+++ b/src/Leaf.Web/Views/Home/Noit.cshtml
@@ -1,12 +1,4 @@
-﻿@{
-    Layout = "~/Areas/Noit/Views/Shared/_NoitLayout.cshtml";
-}
-
-@{
-    ViewBag.Title = "Noit";
-}
-
-<h2>НОИТ</h2>
+﻿<h2>НОИТ</h2>
 <h3>Национална олимпиада по информационни технологии</h3>
 
 <p>
