--- a/src/Leaf.Web/Views/Submit/Submission.cshtml
+++ b/src/Leaf.Web/Views/Submit/Submission.cshtml
@@ -1,4 +1,4 @@
-﻿@model Leaf.Web.Areas.Noit.Models.Submit.SubmissionViewModel
+﻿@model Leaf.Web.Models.Submit.SubmissionViewModel
 
 @{
     ViewBag.Title = "Submission";
