--- a/src/Leaf.Web/Views/Submit/New.cshtml
+++ b/src/Leaf.Web/Views/Submit/New.cshtml
@@ -1,4 +1,4 @@
-﻿@model Leaf.Web.Areas.Noit.Models.Submit.NewSubmitViewModel
+﻿@model Leaf.Web.Models.Submit.NewSubmitViewModel
 
 @{
     ViewBag.Title = "New submission";
@@ -28,7 +28,7 @@
                 @Html.ValidationMessageFor(model => model.Condition)
             </div>
         </div>
-        
+
         <div class="form-group">
             <label class="control-label col-md-2">Верен отговор: </label>
             <div class="col-md-10">
@@ -36,7 +36,7 @@
                 @Html.ValidationMessageFor(model => model.CorrectAnswer, "", new { @class = "text-danger" })
             </div>
         </div>
-        
+
         <div class="form-group">
             <label class="control-label col-md-2">Грешен отговор: </label>
             <div class="col-md-10">
@@ -52,7 +52,7 @@
                 @Html.ValidationMessageFor(model => model.IncorrectAnswerTwo, "", new { @class = "text-danger" })
             </div>
         </div>
-        
+
         <div class="form-group">
             <label class="control-label col-md-2">Грешен отговор: </label>
             <div class="col-md-10">
